--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="logo-icon"></div>
 <div class="logo-shadow"></div>
 </div>
-<div class="heading">acgvideo.co</div>
+<div class="heading">Mhy278.net</div>
 <div class="subheading">梦彗業的静态资源托管</div>
 <div class="tips">
 <div align="center" class="tips-description">您现在似乎没有任何文件将要访问或下载</div>
