--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>梦彗業的静态资源托管</title>
-<link href="./avatar.jpg" rel="icon" />
+<link href="./avatar/mhy278.jpg" rel="icon" />
 <link rel="stylesheet" href="./css/style.css">
 <script src="./js/cr.js"></script>
 <style id="2e6f467e-f0e6-4080-85ab-9fa154d7d042">rt.katakana-terminator-rt::before { content: attr(data-rt); }</style></head>
